2007-03-11  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Fixed DC offset of sinuasoidal voltage and
	current sources.  Also apply default frequency if a transient
	analysis is given.

2007-03-08  Stefan Jahn  <stefan@lkcc.org>

	* qucs_producer.cpp: Fixed detection of a single subcircuit
	definition (skip analysis actions).

	* check_spice.cpp: Handling periodic pulse sources correctly.
	Also default Tr/Tf values for these sources to a given .TRAN step
	value.

2007-03-06  Stefan Jahn  <stefan@lkcc.org>

	* qucs_producer.cpp: Updated the parameter order and added
	Ikf parameter for the qucs library creator.

2007-02-11  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Added translation of lossless transmission
	line component.

2007-02-09  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Fixed value of F and H (linear current
	controlled sources).  Thanks Mike for pointing this out.

2007-02-03  Stefan Jahn  <stefan@lkcc.org>

	* check_spice.cpp: Translating VON and VOFF properties of
	switches into Vt and Vh.  Also fixing R value for resistors
	whose value is also given in the resistor model it refers to.

2007-02-01  Stefan Jahn  <stefan@lkcc.org>

	* scan_spice.l: Allowing subcircuit identifiers to begin with
	a digit.  Also fixing it afterwards.  Introduced component
	suffix macro.  Identifying VSWITCH model.

	* check_spice.cpp: Allowing the SW model also be referenced as
	VSWITCH.

2007-01-31  Stefan Jahn  <stefan@lkcc.org>

	* scan_spice.l: Allowing '_' in device identifiers.  Allowing
	'/' and '-' in other identifiers (e.g. subcircuit) and translate
	them into '_' for Qucs.

	* parse_spice.y: Allowing resistor model to be referenced.

	* check_spice.cpp: Added translations for resistor models.  Fixed
	DC voltage source notation 'VDC 1 0 DC 2'.

2007-01-30  Stefan Jahn  <stefan@lkcc.org>

	* qucs_producer.cpp: Adding subcircuit instance if the SPICE
	file just contains a single subcircuit definition.

2007-01-23  Stefan Jahn  <stefan@lkcc.org>
