@@ -23,6 +23,8 @@ unfixed) have a look at the file BUGS.
 
 (completed tasks are indented one tab)
 
+- Make 'time' and 'frequency' variables available in equations during
+  AC, SP and transient simulation.
 - Allow engineering notation in equations.
 	- Support for ZVR ascii data (R&S network analyzer) as an import
 	  file format in the Qucs Converter.
